Initial commit - Netlify Website

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         You receive a report of a severe security issue on www.netlify.com. You can't immediately confirm the report, so what steps might you take to investigate or substantiate the report? 
         What might you say to the reporter, even though we haven't confirmed their assertion yet, that will instill confidence that our business is very concerned about security? 
         You believe there is a reasonable chance the report is correct and the problem is very large and impactful. How might you escalate?</h2>
-      <h3>Report steps</h3>
-      <pre id="report-steps"></pre>
+      <p id="report-text"></p>
     </section>
 
     <footer>
