--- a/index.html
+++ b/index.html
@@ -75,15 +75,14 @@
     </section>
 
     <section id="report">
-      <h2>We understand you don't know anything about our internal procedures at this stage, but we want you to explain at a high level how you'd react to this situation: 
-        You receive a report of a severe security issue on www.netlify.com. You can't immediately confirm the report, so what steps might you take to investigate or substantiate the report? 
+      <h2> You receive a report of a severe security issue on www.netlify.com. You can't immediately confirm the report, so what steps might you take to investigate or substantiate the report? 
         What might you say to the reporter, even though we haven't confirmed their assertion yet, that will instill confidence that our business is very concerned about security? 
         You believe there is a reasonable chance the report is correct and the problem is very large and impactful. How might you escalate?</h2>
       <p id="report-text"></p>
     </section>
 
     <footer>
-      <p>Created for the job exercise. Contact: oocampo.stephen14@gmail.com</p>
+      <p>Netlify Website for Thrive Technologies — Stephen Ocampo.</p>
     </footer>
   </main>
 
