--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
       <pre>/netlify/* https://www.google.com/search?q=:splat 301</pre>
       <h3>Proxy rule (forward without changing browser URL)</h3>
       <pre>/netlify/* https://www.google.com/search?q=:splat 200!</pre>
-      <p><em>Notes:</em> Proxying external sites can hit CORS, X-Frame-Options, and Google may block embedding. See the README for details.</p>
     </section>
 
     <section id="function">
       <h2>Please attempt to deploy a function on our service. This need not be complicated. It could be "Hello World". 
         Note that failure to deploy is not failing the exercise! Whether you have trouble or not, 
         please describe what you experienced and how you attempted to troubleshoot any issues you encountered.</h2>
-      <p>Try this function URL after deploy: <code>/ .netlify/functions/hello</code></p>
+      <p>Click the button to call the function:</p>
       <button id="call-fn">Call function</button>
       <pre id="fn-result"></pre>
     </section>
